--- a/src/components/UserBarChart/style.module.css
+++ b/src/components/UserBarChart/style.module.css
@@ -1,8 +1,9 @@
 .barchart {
-    width: 900px;
+    width: 790px;
+    height: 250px;
     position: relative;
-    margin-left: 120px;
-    padding: 30px;
+    margin-left: 60px;
+    padding: 20px;
     border-radius: 20px;
     background-color: #fcfcfc;
 }
@@ -52,4 +53,16 @@
     margin-right: 10px;
 }
 
+@media screen and (max-width: 1024px) {
+    .barchart {
+        width: 570px;
+        height: 190px;
+    }
+
+    .containerKg,
+    .containerKcal {
+        font-size: 12px;
+        top: -8px;
+    }
+}
 
