--- a/src/components/UserLineChart/style.module.css
+++ b/src/components/UserLineChart/style.module.css
@@ -1,13 +1,13 @@
 .linechart {
-    width: 300px;
-    height: 300px;
+    width: 258px;
+    height: 258px;
     background-color: #FF0000;
     border-radius: 10px;
     margin-left: 120px;
 }
 
 .subtitle {
-    width: 60%;
+    width: 65%;
     padding-top: 10px;
     padding-left: 20px;
     color: white;
@@ -23,5 +23,19 @@
     opacity: 0.6;
 }
 
+@media screen and (max-width: 1024px) {
+    .linechart {
+        width: 190px;
+        height: 190px;
+    }
+    .subtitle {
+        width: 60%;
+        font-size: 13px;
+    }
+    .customXAxis {
+        font-size: 12px;
+    }
+}
+    
     
 
