--- a/src/components/UserRadarChart/style.module.css
+++ b/src/components/UserRadarChart/style.module.css
@@ -1,6 +1,13 @@
 .radarChart {
-    width: 300px;
-    height: 300px;
+    width: 258px;
+    height: 258px;
     background-color: #000000;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+    .radarChart {
+        width: 190px;
+        height: 190px;
+    }
 }
