--- a/src/components/VerticalLayout/style.module.css
+++ b/src/components/VerticalLayout/style.module.css
@@ -1,4 +1,5 @@
 .container {
+    display: inline-block;
     width: 117px;
     height: 100vh;
     background-color: #000;
@@ -6,7 +7,7 @@
 }
 
 .icones {
-    padding-top: 200px;
+    padding-top: 350px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,5 +28,32 @@
     transform: rotate(-90deg);
     margin-left: -45px;
     margin-top: 150px;
+    
+}
+
+@media screen and (max-width: 1024px) {
+    .container {
+        width: 90px;
+    }
+    .icones {
+        padding-top: 180px;
+        margin-left: 15px;
+    }
+
+    .icone {
+        width: 30px;
+        padding: 10px;
+        margin-bottom: 10px;
+    }
+
+    .copyright {
+        width: 200px;
+        color: #fff;
+        font-size: 10px;
+        transform: rotate(-90deg);
+        margin-left: -50px;
+        margin-top: 100px;
+        
+    }
     
 }
