--- a/src/views/Dashboard/style.module.css
+++ b/src/views/Dashboard/style.module.css
@@ -1,14 +1,14 @@
-.section {
+.dashboardContainer {
+    display: flex;
+    align-items: center;
     position: absolute;
-    width: 92%;
-    top: 95px;
-    left: 120px;
+    top: 0;
+    margin-top: -100px;
 }
 .title {
     font-weight: 800;
     font-size: 3em;
-    margin-left: 120px;
-    margin-top: 60px;
+    margin-left: 60px;
     margin-bottom: 0;
 }
 .name {
@@ -16,15 +16,68 @@
 }
 .text {
     font-size: 1.2em;
-    margin-left: 120px;
+    margin-left: 60px;
 }
 
 .containerCharts {
     margin-top : 60px;
+    width: 65%;
 }
 
 .treeCharts {
+    width: max-content;
+    height: 260px;
     display: flex;
     align-items: center;
-    gap: 50px;
+    gap: 30px;
+    margin-top: 50px;
+    margin-left: -60px;
 }
+
+.energyCount {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 80px;
+    margin-top: 130px;
+}
+
+@media screen and (max-width: 1024px) {
+    .dashboardContainer {
+       width: 60%;
+       margin-top: 0;
+       align-content: center;
+    }
+    .title {
+        font-size: 2em;
+    }
+
+    .text {
+        font-size: 1em;
+    }
+    
+    .blocContainer {
+        align-items: center;
+    }
+    .containerCharts {
+        margin-top : 20px;
+    }
+    
+    .treeCharts {
+        width: max-content;
+        gap: 20px;
+        margin-top: 30px;
+        margin-left: -60px;
+    }
+    
+    .energyCount {
+        width: 25%;
+        margin-left: 30px;
+        margin-top: -10px;
+    }
+
+    
+}
+
