--- a/src/views/Dashboard/style.module.css
+++ b/src/views/Dashboard/style.module.css
@@ -3,8 +3,8 @@
     align-items: center;
     position: absolute;
     top: 0;
-    margin-top: -100px;
 }
+
 .title {
     font-weight: 800;
     font-size: 3em;
@@ -41,7 +41,10 @@
     align-items: center;
     justify-content: center;
     margin-left: 80px;
-    margin-top: 130px;
+    margin-top: -80px;
+}
+.section {
+    margin-top: -200px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -76,6 +79,10 @@
         width: 25%;
         margin-left: 30px;
         margin-top: -10px;
+    }
+
+    .section {
+        margin-top: 10px;
     }
 
     
