--- a/src/views/Dashboard/style.module.css
+++ b/src/views/Dashboard/style.module.css
@@ -5,6 +5,12 @@
     top: 0;
 }
 
+.section {
+    margin-top: 90px;
+    width: 1500px;
+    height: auto;
+}
+
 .title {
     font-weight: 800;
     font-size: 3em;
@@ -20,17 +26,16 @@
 }
 
 .containerCharts {
-    margin-top : 60px;
     width: 65%;
 }
 
 .treeCharts {
     width: max-content;
-    height: 260px;
+    height: max-content;
     display: flex;
     align-items: center;
-    gap: 30px;
-    margin-top: 50px;
+    gap: 60px;
+    margin-top: 30px;
     margin-left: -60px;
 }
 
@@ -41,11 +46,9 @@
     align-items: center;
     justify-content: center;
     margin-left: 80px;
-    margin-top: -80px;
+    margin-top: -180px;
 }
-.section {
-    margin-top: -200px;
-}
+
 
 @media screen and (max-width: 1024px) {
     .dashboardContainer {
